--- a/content/pages/index.mdx
+++ b/content/pages/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: "SSBB: NDOs & AMPs Database"
-description: "Open-access structures and datasets from the Stop Spread Bad Bugs (SSBB) MSCA consortium"
+title: "SSBB NDOs & AMPs Library"
+description: "Open-access structures and datasets from the SSBB MSCA consortium"
 order: 1
 ---
 
@@ -8,8 +8,5 @@ order: 1
 
 Welcome! This site hosts an open-access database of **non-digestible oligosaccharides (NDOs)** and **antimicrobial peptides (AMPs)** collected by the *Stop Spread Bad Bugs (SSBB)* MSCA consortium.
 
-<Callout type="info" title="About the Project">
-  The SSBB project aims to advance the understanding of NDOs and AMPs and their potential to combat antimicrobial resistance.
-</Callout>
-
-Explore the datasets, structural information, and related documentation using the navigation sidebar.
+> **About the Project**  
+> A publicly accessible library of NDO and AMP structures with related experimental data.
