--- a/content/pages/index.mdx
+++ b/content/pages/index.mdx
@@ -1,12 +1,21 @@
 ---
-title: "SSBB NDOs & AMPs Library"
+title: "SSBB: NDOs & AMPs Library"
 description: "Open-access structures and datasets from the SSBB MSCA consortium"
 order: 1
 ---
 
-# SSBB NDO & AMP Database
+# SSBB NDOs & AMPs Library
 
 Welcome! This site hosts an open-access database of **non-digestible oligosaccharides (NDOs)** and **antimicrobial peptides (AMPs)** collected by the *Stop Spread Bad Bugs (SSBB)* MSCA consortium.
 
-> **About the Project**  
-> A publicly accessible library of NDO and AMP structures with related experimental data.
+## Featured Data (Preview)
+
+> Replace the table below with your final table once you send it.
+
+| Compound-ID | Type | Name | Source | Notes |
+|---:|:----:|------|--------|-------|
+| 001 | NDO | Example NDO | SSBB WP 1 | Placeholder row |
+| 002 | AMP | Example AMP | SSBB WP 2 | Placeholder row |
+
+## About
+Data are curated, versioned, and published by the SSBB MSCA consortium. Use the sidebar to explore more sections.
